--- a/CounterView/src/main/res/layout/view_tweet_counter.xml
+++ b/CounterView/src/main/res/layout/view_tweet_counter.xml
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:includeFontPadding="false"
                 android:maxLines="1"
-                android:text="Characters Typed"
+                android:text="@string/characters_typed"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="14sp"
@@ -73,7 +73,7 @@
                 android:layout_height="wrap_content"
                 android:includeFontPadding="false"
                 android:maxLines="1"
-                android:text="Characters Remaining"
+                android:text="@string/characters_remaining"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="14sp"
@@ -108,7 +108,7 @@
         android:layout_marginTop="24dp"
         android:background="@drawable/bg_gray_complent_12dp"
         android:gravity="start"
-        android:hint="Start typing! You can enter up to 280 characters"
+        android:hint="@string/start_typing_you_can_enter_up_to_280_characters"
         android:padding="16dp"
         android:textAlignment="textStart"
         android:textColor="@color/black"
